// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formulář po uložení 1`] = `
<div
  className="Prihlasky_div"
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="small"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        V pořádku
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      V pořádku uloženo
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlasky_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            index={0}
            inputRef={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            index={1}
            inputRef={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            index={2}
            inputRef={[Function]}
            name="udaje.narozeni"
            popisek="narození"
          />
          <Connect(Input)
            Type={[Function]}
            index={3}
            inline={true}
            inputRef={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            index={4}
            inputRef={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            index={5}
            inputRef={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            index={6}
            inputRef={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            index={7}
            inputRef={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            index={8}
            inputRef={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            index={9}
            inputRef={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            index={10}
            inputRef={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            index={11}
            inputRef={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            index={12}
            inputRef={[Function]}
            name="prihlaska.typ"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            index={13}
            inputRef={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            index={14}
            inputRef={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
        <LoadingButton
          bsStyle="success"
          loading={false}
          loadingText="Probíhá ukládání..."
          type="submit"
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="save"
          />
           
          Uložit stávajícího
                          účastníka
        </LoadingButton>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          className="Prihlasky_reset"
          disabled={false}
          onClick={[Function]}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="fire"
          />
           Reset
        </Button>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Platby"
        >
          <Connect(Platby)
            inputRef={[Function]}
            startIndex={15}
          />
        </Panel>
      </Col>
    </Form>
  </Grid>
</div>
`;

exports[`formulář s chybou 1`] = `
<div
  className="Prihlasky_div"
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="small"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        V pořádku
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      V pořádku uloženo
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlasky_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            index={0}
            inputRef={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            index={1}
            inputRef={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            index={2}
            inputRef={[Function]}
            name="udaje.narozeni"
            popisek="narození"
          />
          <Connect(Input)
            Type={[Function]}
            index={3}
            inline={true}
            inputRef={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            index={4}
            inputRef={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            index={5}
            inputRef={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            index={6}
            inputRef={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            index={7}
            inputRef={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            index={8}
            inputRef={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            index={9}
            inputRef={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            index={10}
            inputRef={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            index={11}
            inputRef={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            index={12}
            inputRef={[Function]}
            name="prihlaska.typ"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            index={13}
            inputRef={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            index={14}
            inputRef={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
        <LoadingButton
          bsStyle="success"
          loading={false}
          loadingText="Probíhá ukládání..."
          type="submit"
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="save"
          />
           
          Uložit stávajícího
                          účastníka
        </LoadingButton>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          className="Prihlasky_reset"
          disabled={false}
          onClick={[Function]}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="fire"
          />
           Reset
        </Button>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Platby"
        >
          <Connect(Platby)
            inputRef={[Function]}
            startIndex={15}
          />
        </Panel>
      </Col>
    </Form>
    <HideableError
      code="chybový kód"
      message="Popisek chyby, která se stala."
      onHideError={[Function]}
      title="Chyba při ukládání!"
    />
  </Grid>
</div>
`;

exports[`formulář s existujícím účastníkem 1`] = `
<div
  className="Prihlasky_div"
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="small"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        V pořádku
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      V pořádku uloženo
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlasky_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            index={0}
            inputRef={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            index={1}
            inputRef={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            index={2}
            inputRef={[Function]}
            name="udaje.narozeni"
            popisek="narození"
          />
          <Connect(Input)
            Type={[Function]}
            index={3}
            inline={true}
            inputRef={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            index={4}
            inputRef={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            index={5}
            inputRef={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            index={6}
            inputRef={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            index={7}
            inputRef={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            index={8}
            inputRef={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            index={9}
            inputRef={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            index={10}
            inputRef={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            index={11}
            inputRef={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            index={12}
            inputRef={[Function]}
            name="prihlaska.typ"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            index={13}
            inputRef={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            index={14}
            inputRef={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
        <LoadingButton
          bsStyle="success"
          loading={false}
          loadingText="Probíhá ukládání..."
          type="submit"
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="save"
          />
           
          Uložit stávajícího
                          účastníka
        </LoadingButton>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          className="Prihlasky_reset"
          disabled={false}
          onClick={[Function]}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="fire"
          />
           Reset
        </Button>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Platby"
        >
          <Connect(Platby)
            inputRef={[Function]}
            startIndex={15}
          />
        </Panel>
      </Col>
    </Form>
  </Grid>
</div>
`;

exports[`prázdný formulář 1`] = `
<div
  className="Prihlasky_div"
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="small"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
      >
        V pořádku
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      V pořádku uloženo
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        disabled={false}
        onClick={[Function]}
      >
        Close
      </Button>
    </ModalFooter>
  </Modal>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Connect(PrihlaskySearch) />
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlasky_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            index={0}
            inputRef={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            index={1}
            inputRef={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            index={2}
            inputRef={[Function]}
            name="udaje.narozeni"
            popisek="narození"
          />
          <Connect(Input)
            Type={[Function]}
            index={3}
            inline={true}
            inputRef={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            index={4}
            inputRef={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            index={5}
            inputRef={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            index={6}
            inputRef={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            index={7}
            inputRef={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            index={8}
            inputRef={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            index={9}
            inputRef={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            index={10}
            inputRef={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            index={11}
            inputRef={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            index={12}
            inputRef={[Function]}
            name="prihlaska.typ"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            index={13}
            inputRef={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            index={14}
            inputRef={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
        <LoadingButton
          bsStyle="success"
          loading={false}
          loadingText="Probíhá ukládání..."
          type="submit"
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="save"
          />
           
          Uložit nového
                          účastníka
        </LoadingButton>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          className="Prihlasky_reset"
          disabled={false}
          onClick={[Function]}
        >
          <Glyphicon
            bsClass="glyphicon"
            glyph="fire"
          />
           Reset
        </Button>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={4}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Platby"
        >
          <Connect(Platby)
            inputRef={[Function]}
            startIndex={15}
          />
        </Panel>
      </Col>
    </Form>
  </Grid>
</div>
`;

exports[`při načítání 1`] = `
<div>
  <span
    className="LoadingIndicator glyphicon glyphicon-repeat"
  />
   Načítám účastníky...
</div>
`;
